// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header tests should render Header successfully applying styles from template provided 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F80347",
          "justifyContent": "center",
          "marginTop": 80,
          "padding": 20,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#00ff00",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "Arial",
            "fontSize": 55,
            "fontWeight": "bold",
            "textAlign": "center",
          },
          Object {
            "color": "#fff",
            "fontFamily": "Arial",
          },
        ]
      }
    >
      Header text
    </Text>
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontFamily": "Arial",
              "fontSize": 55,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "color": "#fff",
              "fontFamily": "Arial",
            },
          ]
        }
      >
        Header text
      </Text>,
      "style": Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F80347",
          "justifyContent": "center",
          "marginTop": 80,
          "padding": 20,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#00ff00",
        },
        undefined,
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "Header text",
        "style": Array [
          Object {
            "color": "#fff",
            "fontFamily": "Arial",
            "fontSize": 55,
            "fontWeight": "bold",
            "textAlign": "center",
          },
          Object {
            "color": "#fff",
            "fontFamily": "Arial",
          },
        ],
      },
      "ref": null,
      "rendered": "Header text",
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Text
          style={
            Array [
              Object {
                "color": "#fff",
                "fontFamily": "Arial",
                "fontSize": 55,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "color": "#fff",
                "fontFamily": "Arial",
              },
            ]
          }
        >
          Header text
        </Text>,
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F80347",
            "justifyContent": "center",
            "marginTop": 80,
            "padding": 20,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#00ff00",
          },
          undefined,
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Header text",
          "style": Array [
            Object {
              "color": "#fff",
              "fontFamily": "Arial",
              "fontSize": 55,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "color": "#fff",
              "fontFamily": "Arial",
            },
          ],
        },
        "ref": null,
        "rendered": "Header text",
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {},
    Symbol(enzyme.__providerValues__): Map {},
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Header tests should render Header successfully without template 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F80347",
          "justifyContent": "center",
          "marginTop": 80,
          "padding": 20,
          "width": "100%",
        },
        Object {},
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "Arial",
            "fontSize": 55,
            "fontWeight": "bold",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Header text
    </Text>
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontFamily": "Arial",
              "fontSize": 55,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {},
          ]
        }
      >
        Header text
      </Text>,
      "style": Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F80347",
          "justifyContent": "center",
          "marginTop": 80,
          "padding": 20,
          "width": "100%",
        },
        Object {},
        undefined,
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "Header text",
        "style": Array [
          Object {
            "color": "#fff",
            "fontFamily": "Arial",
            "fontSize": 55,
            "fontWeight": "bold",
            "textAlign": "center",
          },
          Object {},
        ],
      },
      "ref": null,
      "rendered": "Header text",
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Text
          style={
            Array [
              Object {
                "color": "#fff",
                "fontFamily": "Arial",
                "fontSize": 55,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {},
            ]
          }
        >
          Header text
        </Text>,
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F80347",
            "justifyContent": "center",
            "marginTop": 80,
            "padding": 20,
            "width": "100%",
          },
          Object {},
          undefined,
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Header text",
          "style": Array [
            Object {
              "color": "#fff",
              "fontFamily": "Arial",
              "fontSize": 55,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {},
          ],
        },
        "ref": null,
        "rendered": "Header text",
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {},
    Symbol(enzyme.__providerValues__): Map {},
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
